# python-web_hw_09

./: README.md  authors.json  pyproject.toml
version_1/: connect.py  main.py  models.py  search_quotes.py  seeds.py
